# snowpark-python

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEBUG_VIS_README.md  Demo-AH-092321.ipynb  Demo-prod-review.ipynb  Demo.ipynb  LICENSE.txt  MANIFEST.in  README.md  Untitled1.ipynb  bvt.sh  canva_demo.ipynb  csv_reader_java.py  external_telemetry.py  foo  generate_csv_test_data.py  hybrid_snowpark_pandas_test.ipynb  interchange_protocol_demo.ipynb  iris_data.sql  large_csv_read_poc_copy_into.py  large_csv_read_poc_current_upload.py  large_csv_read_poc_java.py  large_csv_read_poc_udtf.py  license_header.txt  lr.py  map-0-98-leashmp-competition.ipynb  mypy.ini  new_types_demo.py  new_types_demo_notebook.ipynb  plotly_6_narwhals_slow_demo.py  pyproject.toml  setup.py  slow_hybrid_perf.ipynb  snowpark_functions  snowpark_functions_used_in_pandas.py  snowpark_streaming_demo.py  (+9 more)
.claude/agents/: snowpark-expert.md
.cursor/rules/: running-snowpark-python-tests.mdc
.github/: BUG_REPORT.md  CODEOWNERS  labeler.yml  pull_request_template.md  repo_meta.yaml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  LOCAL_TESTING_BUG_REPORT.md  LOCAL_TESTING_FEATURE_REQUEST.md  bug-report-for-local-testing.md  feature-request-for-local-testing.md
.github/scripts/: decrypt_parameters.sh  install_protoc.sh
.github/workflows/: ast-check.yml  changedoc_snowpark_pandas.yml  changelog.yml  changelog_snowpark_pandas.yml  checkprs.yml  cla_bot.yml  create-test-branch-from-release.yml  create_req_files.yml  daily_jupyter_nb_test.yml  daily_modin_precommit.yml  daily_modin_precommit_py310.yml  daily_modin_precommit_py311_py312.yml  daily_modin_precommit_py311_py312_py13.yml  daily_modin_precommit_py39_py310.yml  daily_modin_precommit_v1.yml  daily_precommit.yml  enforce_localtest.yml  jira_close.yml  jira_issue.yml  label_snowpark_pandas.yml  labeler.yml  precommit.yml  python-publish.yml  scos-daily.yml  scos-integration.yml  sfdq-e2e-caller.yml  snyk-issue.yml  snyk-pr.yml  test-with-universal-driver.yml  threadsafe-check.yml  trigger_daily_tests_on_branch.yml  ud-inline-tests.yml  update_meta.yml
SNOW-1819834-hybrid-client-demos/: astronomer_jaffle_shop_hybrid_benchmark.ipynb
ci/: check_standalone_function_snowpark_pandas_telemetry_decorator.py  test_fips.sh  test_fips_docker.sh
ci/snyk/: requirements.txt
demo/: hybrid_pandas_demo_script.md  snowpark_pandas_hybrid_execution_demo_snowpark_all_hands_20250709.ipynb
demo-third-party-libraries/: README  demo_py39_1_25_0_before.yml  demo_py39_1_25_0_before_empty.ipynb  demo_py39_1_25_0_before_full.ipynb  demo_py39_1_27_0_after.yml  demo_py39_1_27_0_after_empty.ipynb  demo_py39_1_27_0_after_full.ipynb
docs/: Makefile  README.md  connector-upgrade-adr.md
docs/modin_api_coverage/: API-Documentation-Generation.ipynb  DocumentedPandasAPI.csv  Supported_API.csv  Supported_API.md
docs/source/: IO.rst  async_job.rst  column.rst  conf.py  context.rst  core_classes.rst  dataframe.rst  doc_gen.py  exceptions.rst  files.rst  functions.rst  generate_doc.py  grouping.rst  index.rst  io.rst  modules.rst  observability.rst  row.rst  session.rst  snowpark.internal.analyzer.rst  snowpark.internal.rst  snowpark.plans.logical.rst  snowpark.plans.rst  snowpark.rst  snowpark.types.rst  snowpark_classes.rst  stored_procedures.rst  table.rst  table_function.rst  types.rst  udaf.rst  udf.rst  udtf.rst  util.py  window.rst
docs/ud-readiness/: snowpark-test-entrypoint-catalog.md
hybrid-demo/: README.md  auto_engine_switching_data_size_demo-jkew.ipynb  auto_engine_switching_data_size_demo.ipynb  build_verification_test.ipynb  data.csv  hybrid_customer_demo.ipynb  hybrid_demo.ipynb  hybrid_demo_all_snow.ipynb  manual_engine_switching_demo.ipynb
local-testing-docs/: README.md  environment.yml  quickstart-complete.py  requirements.txt  setup.py
local-testing-docs/features/: environment.py  transformers.feature
local-testing-docs/project/: local.py  sproc.py  transformers.py
local-testing-docs/test/: conftest.py  test_transformers.py
pdf_reader_poc/: README.md  demo.py  requirements.txt  sp500_earnings_demo.py
perf/: README.md  collect_dataframe.py  create_dataframe_save_table.py
recipe/: meta.yaml
samples/: data_engineering.py
scripts/: build_ud_connector.sh  conda_build.sh  copy-ast.sh  copy-remote-ast.sh  jenkins_regress.sh  jenkins_regress_snowpandas.sh  longprs.py  parameters-snowpandas-prod-aws.py.gpg  parameters.py.gpg  parameters_prod.py.gpg  parameters_qa.py.gpg  parameters_qa1.py.gpg  rsa_key_jenkins.p8.gpg  run_snowparkpandasnotdoctest.sh  run_tests_with_ud.sh  tox_install_cmd.sh  ud_tox_install_cmd.sh  wss.sh
scripts/airflow/: requirements.txt  system_test_dashboard.py
scripts/conda_build_verification/: README.md  conda_build_verification.sh  docker_verify.sh  smoke_test.py
scripts/release/: prepare_release_branch.py  readme.md
src/: combined.py  conftest.py
src/snowflake/: data_source.py
test/: .gitignore  README.md  __init__.py  conftest.py  parameters.py  pytest.ini  utils.py
test/integ/: conftest.py  dataframe_aggregate_suite.py  test_builtin.py  test_column.py  test_data.py  test_dataframe.py  test_dataframe_suite.py  test_df_aggregate.py  test_df_sort.py  test_df_to_pandas.py  test_function.py  test_imputer.py  test_one_hot_encoder.py  test_result_attributes.py  test_session.py  test_udf.py  (+2 more)
test_modin_integration_notebook_results/: altair.ipynb  matplotlib (2).ipynb  seaborn.ipynb  sklearn (1).ipynb
tests/: .gitignore  README.md  conftest.py  dummy.py  run-unparser.sh  utils.py
(+2853 files in other folders)
